<resources>
    <string name="app_name">Trivia</string>
    <string name="titel_text">Trivia</string>
    <string name="out_off_text">Question: 45/90</string>
    <string name="true_button">true</string>
    <string name="false_button">false</string>
    <string name="next_button">next</string>
    <string name="text_formated">Question: %d/%d</string>
    <string name="correct_answer" >Correct</string>
    <string name="incorrect" >Incorrect</string>
    <string name="highScore">Highest Score:0</string>
    <string name="currentScore">Current Score:0</string>
</resources>